--- a/breathe/index.html
+++ b/breathe/index.html
@@ -184,6 +184,7 @@
 				e.preventDefault();
 				e.stopPropagation();
 				//DANGER -- could be client-dependent
+				if(e.originalEvent && e.originalEvent.touches && e.originalEvent.touches[0]) e.touches = e.originalEvent.touches;
 				var currentYCoordinate = e.touches && e.touches[0] ? e.touches[0].clientY : e.clientY;
 				//special formula -- if you go below min it does nothing. Over max does nothing as well.
 				var distance = currentYCoordinate - touchStartY > 0 ? Math.min(maxDistance,currentYCoordinate - touchStartY) : 0;
