--- a/breathe/index.html
+++ b/breathe/index.html
@@ -190,7 +190,7 @@
 				var blackness = Math.floor(256* distance / maxDistance);
 				var string = "rgb("+blackness+","+blackness+","+blackness+")";
 				//$("#body").text(string);
-				console.log(string)
+				console.log(touchStartY,currentYCoordinate,maxDistance,blackness,string)
 				$("#body").css("background-color",string);
 
 				//load the final instruction
