--- a/breathe/index.html
+++ b/breathe/index.html
@@ -170,27 +170,32 @@
 			var touchStartY;
 			var maxDistance = 200;
 
+			function getYPos()
+			{
+				return e.originalEvent && e.originalEvent.touches && e.originalEvent.touches[0] ? e.originalEvent.touches[0].clientY : e.clientY;
+			}
+
 			//reset start position each time
 			$("#body").on("touchstart mousedown",function(e) {
 				console.log("touchstart")
 				//DANGER -- could be client-dependent
 				if(!touchStartY)
-					touchStartY = e.touches && e.touches[0] ? e.touches[0].clientY : e.clientY;
+					touchStartY = getYPos();
 			});
 
 			// While moving, update the color
 			$("#body").on("touchmove mousemove",function(e) {
-				console.log("touchmove",e.originalEvent.touches[0].clientY);
+				//console.log("touchmove",e.originalEvent.touches[0].clientY);
 				e.preventDefault();
 				e.stopPropagation();
 				//DANGER -- could be client-dependent
-				var currentYCoordinate = e.originalEvent && e.originalEvent.touches && e.originalEvent.touches[0] ? e.originalEvent.touches[0].clientY : e.clientY;
+				var currentYCoordinate = getYPos();
 				//special formula -- if you go below min it does nothing. Over max does nothing as well.
 				var distance = currentYCoordinate - touchStartY > 0 ? Math.min(maxDistance,currentYCoordinate - touchStartY) : 0;
 				var blackness = Math.floor(256* distance / maxDistance);
 				var string = "rgb("+blackness+","+blackness+","+blackness+")";
 				//$("#body").text(string);
-				console.log(touchStartY,currentYCoordinate,maxDistance,blackness,string)
+				//console.log(touchStartY, currentYCoordinate, maxDistance, blackness, string);
 				$("#body").css("background-color",string);
 
 				//load the final instruction
