testing mobile embed

--- a/dissolve/phrases.html
+++ b/dissolve/phrases.html
@@ -58,7 +58,7 @@
 
   </script>
 
-  <title>Emotion</title>
+  <title>Responding</title>
   <style>
     #userText, .buttons {
       background-color:white;
