--- a/dissolve/index.html
+++ b/dissolve/index.html
@@ -58,7 +58,7 @@
 
   </script>
 
-  <title>Emotion</title>
+  <title>Feeling</title>
   <style>
     #userText, .buttons {
       margin-top: 100px;
