--- a/stream/index.html
+++ b/stream/index.html
@@ -28,8 +28,8 @@
 	.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } 
 	.embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
 	
-	#pdf-container { overflow: auto; -webkit-overflow-scrolling: touch; height: 500px; padding-top: 50px; }
-	#obj {  }
+	#pdf-container { overflow: auto; -webkit-overflow-scrolling: touch;  padding-top: 50px; }
+	#obj { height:100%; }
     
 </style>
 
