don't allow fullscreen

--- a/stream/index.html
+++ b/stream/index.html
@@ -128,8 +128,8 @@
 
 
 	<div class='embed-container'>
-		<iframe id="demo-video" style="display: none;" src='https://www.youtube.com/embed/zwuKRGndLN0' frameborder='0' allowfullscreen></iframe>
-		<iframe id="real-video" src='https://www.youtube.com/embed/live_stream?channel=UCFAuQ5fmYYVv5_Dim0EQpVA' frameborder='0' allowfullscreen></iframe>
+		<iframe id="demo-video" style="display: none;" src='https://www.youtube.com/embed/zwuKRGndLN0' frameborder='0'></iframe>
+		<iframe id="real-video" src='https://www.youtube.com/embed/live_stream?channel=UCFAuQ5fmYYVv5_Dim0EQpVA' frameborder='0'></iframe>
 	</div>
 
 	<div class="w3-container">
