--- a/stream/index.html
+++ b/stream/index.html
@@ -28,7 +28,7 @@
 	.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; margin-top: 50%} 
 	.embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
 	
-	#close-button { font-size: 20pt; color: rgb(186, 181, 181) }
+	#close-button { font-size: 20pt; color: rgb(186, 181, 181); }
 	.main-content { overflow-y: scroll; padding-top: 40px; }
 	.image-holder { height: 50% }
 	
@@ -195,7 +195,7 @@
 
 	<div class='embed-container'>
 		<iframe id="demo-video" style="display: none;" src='https://www.youtube.com/embed/zwuKRGndLN0?playsinline=1' frameborder='0'></iframe>
-		<iframe id="real-video" src='https://www.youtube.com/embed/live_stream?channel=UCFAuQ5fmYYVv5_Dim0EQpVA' frameborder='0' ></iframe>
+		<iframe id="real-video" src='https://www.youtube.com/embed/live_stream?channel=UCFAuQ5fmYYVv5_Dim0EQpVA&playsinline=1' frameborder='0' ></iframe>
 	</div>
 
 	<div class="w3-container">
