hack the stupid cache

--- a/stream/index.html
+++ b/stream/index.html
@@ -67,7 +67,7 @@
         In case you don't want the gloss applied, use "apple-touch-icon-precomposed" instead of "apple-touch-icon".
     -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="apple-touch-icon.png" /> <!-- apple-touch-icon.png -->
+    <link rel="apple-touch-icon" href="apple-touch-icon-1.png" /> <!-- apple-touch-icon.png -->
 
     <!--
         Add a splash screen / startup image.
