--- a/chant-karaoke-generator/index.html
+++ b/chant-karaoke-generator/index.html
@@ -12,17 +12,24 @@
 </head>
 
 <body id=body onload="loadChantIndex()">
-    <div id="nav">(Other pages: <a href="chantList.html">View All user-recorded Chants</a>) </div>
+	<div id="nav">(Other pages: <a href="chantList.html">View All user-recorded Chants</a>) </div>
     <p><h1 id="instructions"> Select the chant you'll be uploading: </h1> </p>
 	<!-- STEP 1: select a chant -->
 	<div id="chantIndex">
 	
 	</div>
-	<!-- STEP 2: select a file from computer -->
-	<form id="audioFileForm" style="display: none">
-		
-		<input type='file' id="audioFileInput" /> <!-- starts hidden, loads after chant has been selected-->
-	</form>
+	<div id="airtableHolder" style="display:none">
+		<iframe id="airtableIframe" class="airtable-embed" src="" frameborder="0" onmousewheel="" width="500" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
+		<p>Click this button ONLY when you see the message "click the button below!" in the form above. (Or, if you already uploaded your file, click to skip file upload)
+			<Br><button id="airtableUploadComplete"> Form has been submitted </button></p>
+	</div>
+
+	<!-- - show last X submissions so user can pick file -->
+	<div id="recentUploads">
+
+	</div>
+
+
 	<!-- STEP 3: click and go! -->
 	<div id="karaokeBuilder" style="display: none" >
 		<audio id="audio" controls src="" > <!-- starts hidden, loads after a file is selected-->
