--- a/chant-karaoke-generator/chantList.html
+++ b/chant-karaoke-generator/chantList.html
@@ -1,10 +1,18 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<style>
-		#scrollDemo { font-size: 24px; line-height: 40px; max-height: 120px; width: 500px; white-space: pre-wrap; overflow-y: scroll  }
-		#scrollDemoHolder {  }
-		button {margin: 5px;}
-	</style>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+
+  <!-- Set the base path of relative URLs. Necessary when deploying to a folder. CSS and other paths must be used as relative. -->
+  <!-- Comment out or update when developing on a localhost server. -->
+  <base href="http://jeffzira.github.io/chant-karaoke-generator/" />
+
+  <title>Chanting List</title>
+
+  <link rel="stylesheet" href="assets/css/main.css">
 </head>
 
 <body id=body onload="loadUserGeneratedChants()">
@@ -12,7 +20,7 @@
 	<p><h1 id="instructions"> Select a chant to listen to </h1> </p>
 	<!-- STEP 1: select a chant -->
 	<div id="chantIndex">
-	
+
 	</div>
 
 	<!-- STEP 3: click and go! -->
@@ -25,21 +33,21 @@
 		</audio>
 
 		<pre id="chantText">
-			
+
 		</pre>
 		<div id="scrollDemoHolder"><div id="scrollDemo" style="display:none"></div></div>
 	</div>
 	<!-- STEP 4: review and submit -->
-	
-
-	
 
 
 
 
 
 
-	<script src="airtable.js"></script>	
+
+
+
+	<script src="airtable.js"></script>
 	<script src="scripts.js"></script>
 
 </body>
