--- a/stream/index.html
+++ b/stream/index.html
@@ -14,7 +14,14 @@
 	#livestream-not-started { font-size: 24pt; color: white; }
 	
 	/* youtube mobile embed styles. Taken from some guy's site */
-	.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; margin-top: 50%} 
+	.embed-container {
+		position: relative;
+		padding-bottom: 56.25%;
+		height: 0;
+		overflow: hidden;
+		max-width: 100%;
+		margin-top: 50%
+	}
 	.embed-container iframe, .embed-container object, .embed-container embed, .embed-container audio { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
 	#demo-audio img {
 		height: 80%; /* have to do this for this particular image's aspect ratio. Should throw this out later */
@@ -247,9 +254,11 @@
 	</div>
 
 	<div class="w3-container">
+
 	  <button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-black">Book 1</button>
 	  <button onclick="document.getElementById('id02').style.display='block'" class="w3-button w3-black">Book 2</button>
-	  
+		<a href="https://livetrafficfeed.com/online-counter" data-text="ffffff" data-background="000000" data-root="0" id="LTF_online_website">Site Online Counter</a>
+		<script type="text/javascript" src="//cdn.livetrafficfeed.com/static/online/live.v2.js"></script><noscript><a href="http://livetrafficfeed.com/online-counter">Website Counter Online</a></noscript>
 	  <div id="demo-buttons" style="margin-top: 50px">
 	  	<button class="w3-button w3-black" onclick="document.getElementById('demo-video').style.display='block'; hideDemoStuff()">(video demo)</button><br>
 	  	<button class="w3-button w3-black" onclick="document.getElementById('demo-audio').style.display='block'; hideDemoStuff()">(audio demo)</button>
