--- a/stream/index.html
+++ b/stream/index.html
@@ -257,7 +257,7 @@
 
 	  <button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-black">Book 1</button>
 	  <button onclick="document.getElementById('id02').style.display='block'" class="w3-button w3-black">Book 2</button>
-		
+		<script type="text/javascript" src="//livecounter.theyosh.nl/3666.js"></script>
 	  <div id="demo-buttons" style="margin-top: 50px">
 	  	<button class="w3-button w3-black" onclick="document.getElementById('demo-video').style.display='block'; hideDemoStuff()">(video demo)</button><br>
 	  	<button class="w3-button w3-black" onclick="document.getElementById('demo-audio').style.display='block'; hideDemoStuff()">(audio demo)</button>
