test touchmove on mobile (debug)

--- a/stream/index.html
+++ b/stream/index.html
@@ -390,7 +390,7 @@
 
 
 	<script type="text/javascript">
-		document.getElementById("body").addEventListener("ontouchstart",function (e) {
+		document.getElementById("body").addEventListener("touchmove",function (e) {
 			console.log("touch started", e)
 		})
 		document.getElementById("body").addEventListener("wheel",function (e) {
