--- a/stream/index.html
+++ b/stream/index.html
@@ -51,9 +51,12 @@
 	.pause-button { margin-right: 30px }
 	
 	/* scroll within the popup, max height at 100% so overflow will scroll. Padding for the X button */
-	.main-content { overflow-y: scroll; padding-top: 40px; height: 100% } 
+	.main-content { overflow-y: scroll;  height: 100% }
 	
-	
+	/*debug
+	.image-holder img {
+		border: 1px solid;
+	}*/
 	/* don't let the images get wider than popup. Auto scale height accordingly */
 	.chant-image { width: 100%; }
 	
@@ -261,6 +264,12 @@
 		ChantAutoScroll.startAutoScrollingFromStart();
     }
 
+    function closeChantModalClicked(bookNum) {
+		document.getElementById('toc-'+bookNum).scrollIntoView(true);
+		document.getElementById('id0'+bookNum).style.display='none';
+		showAllPagesForBook(bookNum);
+		ChantAutoScroll.controls.closeClicked()
+	}
 
     
     function showAllPagesForBook(bookNum) {
@@ -322,10 +331,10 @@
 	  <div id="id02" class="w3-modal">
 	    <div class="w3-modal-content">
 	      <div class="w3-container">
-		    <span id="start-scrolling-button2" style="display:block" onclick="ChantAutoScroll.userHitStart()" class="w3-button w3-display-topright pause-button">(scroll)</span>
-		  	<span id="stop-scrolling-button2" style="display:none" onclick="ChantAutoScroll.userHitPause()" class="w3-button w3-display-topright pause-button">(stop)</span>
+		    <span id="start-scrolling-button2" style="display:none" onclick="ChantAutoScroll.controls.userHitStart()" class="w3-button w3-display-topright pause-button">(scroll)</span>
+		  	<span id="stop-scrolling-button2" style="display:none" onclick="ChantAutoScroll.controls.userHitPause()" class="w3-button w3-display-topright pause-button">(stop)</span>
 			  &nbsp;&nbsp;
-	        <span onclick="document.getElementById('toc-2').scrollIntoView(true); document.getElementById('id02').style.display='none'; showAllPagesForBook(2); ChantAutoScroll.closeClicked()" class="close-button w3-button w3-display-topright">&times;</span>
+	        <span onclick="closeChantModalClicked(2)" class="close-button w3-button w3-display-topright">&times;</span>
 	        <div class="main-content">	        
 	        	<div id="toc-2" class="toc">
 	        		<!-- filled in by loadTOC -->
@@ -346,10 +355,10 @@
 	  <div id="id01" class="w3-modal">
 	    <div class="w3-modal-content">
 	      <div class="w3-container">
-			  <span id="start-scrolling-button1" style="display:block" onclick="ChantAutoScroll.userHitStart()" class="w3-button w3-display-topright pause-button">(scroll)</span>
-			  <span id="stop-scrolling-button1" style="display:none" onclick="ChantAutoScroll.userHitPause()" class="w3-button w3-display-topright pause-button">(pause)</span>
+			  <span id="start-scrolling-button1" style="display:none" onclick="ChantAutoScroll.controls.userHitStart()" class="w3-button w3-display-topright pause-button">(scroll)</span>
+			  <span id="stop-scrolling-button1" style="display:none" onclick="ChantAutoScroll.controls.userHitPause()" class="w3-button w3-display-topright pause-button">(pause)</span>
 			  &nbsp;&nbsp;
-	        <span onclick="document.getElementById('toc-1').scrollIntoView(true); document.getElementById('id01').style.display='none'; showAllPagesForBook(1); ChantAutoScroll.closeClicked()" class="close-button w3-button w3-display-topright">&times;</span>
+	        <span onclick="closeChantModalClicked(1)" class="close-button w3-button w3-display-topright">&times;</span>
 	        <div class="main-content">
 			    <div id="toc-1" class="toc">
 					<!-- filled in by loadTOC -->
